--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -52,8 +52,8 @@
 					  
 					  <td> 
 						<div class="price-wrap"> 
-						  <var class="price">₹{{ cart_item.sub_total }}</var> 
-						  <small class="text-muted"> ₹{{cart_item.product.price}} </small> 
+						  <var class="price">${{ cart_item.sub_total }}</var> 
+						  <small class="text-muted"> ${{cart_item.product.price}} </small> 
 						</div> <!-- price-wrap .// -->
 					  </td>
 			
@@ -72,19 +72,19 @@
 		<div class="card-body">
 			<dl class="dlist-align">
 			  <dt>Total price:</dt>
-			  <dd class="text-right">₹{{total}} </dd>
+			  <dd class="text-right">${{total}} </dd>
 			</dl>
 			<dl class="dlist-align">
 			  <dt>Tax:</dt>
-			  <dd class="text-right">₹{{tax}}</dd>
+			  <dd class="text-right">${{tax}}</dd>
 			</dl>
 			<dl class="dlist-align">
 			  <dt>Total:</dt>
-			  <dd class="text-right text-dark b"><strong>₹{{grand_total}}</strong></dd>
+			  <dd class="text-right text-dark b"><strong>${{grand_total}}</strong></dd>
 			</dl>
 			<hr>
 			<p class="text-center mb-3">
-				<img src="./images/misc/payments.png" height="26">
+				<img src="{% static './images/misc/payments.png' %}" height="26">
 			</p>
 			
 			<div id="paypal-button-container"></div>
